ar_network.html

--- a/ar_network.html
+++ b/ar_network.html
@@ -287,7 +287,7 @@
         <div class="container">
             <nav>
                 <div class="logo">
-                    <div class="logo-circle"><img class="logo" src="file:///R:/web%20project/ar%20logo.jpg"></div>
+                    <div class="logo-circle"><img class="logo" src="https://raw.githubusercontent.com/arnetworkhouse-oss/ar-network-house/main/ar%20logo.jpg"></div>
                     <span>AR Network House</span>
                 </div>
                 <div class="menu-toggle" id="menu-toggle">
@@ -408,5 +408,6 @@
         });
     </script>
 </body>
+
 
 </html>
