ar_network.html

--- a/ar_network.html
+++ b/ar_network.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="https://raw.githubusercontent.com/arnetworkhouse-oss/ar-network-house/main/ar%20logo.jpg" type="image/png">
+    <link rel="icon" href="https://raw.githubusercontent.com/arnetworkhouse-oss/ar-network-house/main/ar%20logo.jpg"
+        type="image/png">
     <title>AR Network House</title>
     <style>
         :root {
@@ -225,7 +226,7 @@
             margin: 0 auto;
             transition: 0.3s;
         }
-       
+
         .contact form {
             display: flex;
             flex-direction: column;
@@ -268,7 +269,7 @@
             width: 50px;
         }
 
-         div.notice {
+        div.notice {
             background: white;
             border-radius: 10px;
             padding: 20px;
@@ -287,7 +288,9 @@
         <div class="container">
             <nav>
                 <div class="logo">
-                    <div class="logo-circle"><img class="logo" src="https://raw.githubusercontent.com/arnetworkhouse-oss/ar-network-house/main/ar%20logo.jpg"></div>
+                    <div class="logo-circle"><img class="logo"
+                            src="https://raw.githubusercontent.com/arnetworkhouse-oss/ar-network-house/main/ar%20logo.jpg">
+                    </div>
                     <span>AR Network House</span>
                 </div>
                 <div class="menu-toggle" id="menu-toggle">
@@ -366,8 +369,12 @@
     </section>
 
     <div class="notice" id="notice">
-         <h2 style="text-align:center; color:#3a3af5; font-size: 28px; margin-bottom: 20px;"><u> Work Submission Form</u></h2>
-         
+        <h2 style="text-align:center; color:#3a3af5; font-size: 28px; margin-bottom: 20px;"><u> Work Submission Form</u>
+        </h2>
+        <p></p>
+        <center>Tap the button to give your work to us !
+        </p>
+         <a href="https://docs.google.com/forms/d/e/1FAIpQLSc823X7If-DehxrBNTZwGcRIXyhcVKIHD8YVGCnO7Ts63ysTw/viewform" class="btn">Click Here</a></center>
     </div>
 
     <section id="contact" style="background-color: #f9f9ff; padding: 60px 0;">
@@ -396,7 +403,10 @@
 
 
     <footer>
-        © <span id="year"></span> AR Network House | All rights reserved. | <a href="https://docs.google.com/document/d/1zunBVPuxMITIN7xLEyTT-Q6PvzNRQQEvqtp1Eo9ugLw/edit?tab=t.0"><strong><font align="left">Privacy Policy</font></strong></a>
+        © <span id="year"></span> AR Network House | All rights reserved. | <a
+            href="https://docs.google.com/document/d/1zunBVPuxMITIN7xLEyTT-Q6PvzNRQQEvqtp1Eo9ugLw/edit?tab=t.0"><strong>
+                <font align="left">Privacy Policy</font>
+            </strong></a>
     </footer>
 
     <script>
@@ -408,6 +418,5 @@
         });
     </script>
 </body>
-
 
 </html>
