ar_network.html

--- a/ar_network.html
+++ b/ar_network.html
@@ -354,7 +354,7 @@
                     <h3>
                         <font color="green">দুয়ারে Physics</font>
                     </h3>
-                    <p><a href="https://duyare-physics.github.io/turbo/intro.html">Tap to see !</a></p>
+                    <p><a href="https://duyare-physics.github.io/turbo/home.html">Tap to see !</a></p>
                 </div>
                 <!-- <div class="project-card">
           <h3>Photography Basics</h3>
@@ -420,3 +420,4 @@
 </body>
 
 </html>
+
