ar_network.html

--- a/ar_network.html
+++ b/ar_network.html
@@ -303,6 +303,8 @@
                     <a href="#about">About</a>
                     <a href="#services">Services</a>
                     <a href="#projects">Projects</a>
+                   <a href="#work-form">Work Form</a>
+
                     <a href="#contact">Contact</a>
                 </div>
             </nav>
@@ -354,7 +356,7 @@
                     <h3>
                         <font color="green">দুয়ারে Physics</font>
                     </h3>
-                    <p><a href="https://duyare-physics.github.io/turbo/home.html">Tap to see !</a></p>
+                    <p><a href="https://duyare-physics.github.io/turbo/intro.html">Tap to see !</a></p>
                 </div>
                 <!-- <div class="project-card">
           <h3>Photography Basics</h3>
@@ -368,7 +370,7 @@
         </div>
     </section>
 
-    <div class="notice" id="notice">
+    <div class="notice" id="work-form">
         <h2 style="text-align:center; color:#3a3af5; font-size: 28px; margin-bottom: 20px;"><u> Work Submission Form</u>
         </h2>
         <p></p>
@@ -420,4 +422,3 @@
 </body>
 
 </html>
-
