--- a/ar_network.html
+++ b/ar_network.html
@@ -356,7 +356,7 @@
                     <h3>
                         <font color="green">দুয়ারে Physics</font>
                     </h3>
-                    <p><a href="https://duyare-physics.github.io/turbo/intro.html">Tap to see !</a></p>
+                    <p><a href="https://duyare-physics.github.io/turbo/home.html">Tap to see !</a></p>
                 </div>
                 <!-- <div class="project-card">
           <h3>Photography Basics</h3>
@@ -422,3 +422,4 @@
 </body>
 
 </html>
+
