ar_network.html

--- a/ar_network.html
+++ b/ar_network.html
@@ -303,7 +303,7 @@
                     <a href="#about">About</a>
                     <a href="#services">Services</a>
                     <a href="#projects">Projects</a>
-                   <a href="#work-form">Work Form</a>
+                    <a href="#work-form">Work Form</a>
 
                     <a href="#contact">Contact</a>
                 </div>
@@ -369,15 +369,19 @@
             </div>
         </div>
     </section>
-
-    <div class="notice" id="work-form">
-        <h2 style="text-align:center; color:#3a3af5; font-size: 28px; margin-bottom: 20px;"><u> Work Submission Form</u>
-        </h2>
-        <p></p>
-        <center>Tap the button to give your work to us !
-        </p>
-         <a href="https://docs.google.com/forms/d/e/1FAIpQLSc823X7If-DehxrBNTZwGcRIXyhcVKIHD8YVGCnO7Ts63ysTw/viewform" class="btn">Click Here</a></center>
-    </div>
+    <section class="notice" id="work-form">
+        <div class="notice" id="work-form">
+            <h2 style="text-align:center; color:#3a3af5; font-size: 28px; margin-bottom: 20px;"><u> Work Submission
+                    Form</u>
+            </h2>
+            <p></p>
+            <center>Tap the button to give your work to us !
+                </p>
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSc823X7If-DehxrBNTZwGcRIXyhcVKIHD8YVGCnO7Ts63ysTw/viewform"
+                    class="btn">Click Here</a>
+            </center>
+        </div>
+    </section>
 
     <section id="contact" style="background-color: #f9f9ff; padding: 60px 0;">
         <div
@@ -422,4 +426,3 @@
 </body>
 
 </html>
-
