AR Network House
Updated the AR Network House HTML structure and content, including changes to the services offered and contact information.

--- a/ar_network.html
+++ b/ar_network.html
@@ -341,8 +341,8 @@
                     <p>Personalized website design with future updates & maintanance</p>
                 </div>
                 <div class="service-card">
-                    <h3>Digital assistance</h3>
-                    <p>Suggestion for digital creation with AI prompt </p>
+                    <h3>CV</h3>
+                    <p>creating  & updating  CV with custom lines and prompt </p>
                 </div>
             </div>
         </div>
@@ -371,8 +371,8 @@
     </section>
     <section class="notice" id="work-form">
         <div class="notice" id="work-form">
-            <h2 style="text-align:center; color:#3a3af5; font-size: 28px; margin-bottom: 20px;"><u> Work Submission
-                    Form</u>
+            <h2 style="text-align:center; color:#3a3af5; font-size: 28px; margin-bottom: 20px;"><i> Work Submission
+                    Form</i>
             </h2>
             <p></p>
             <center>Tap the button to give your work to us !
@@ -396,8 +396,8 @@
             <p style="text-align:center; margin-top:20px; color:#555;">
                 email us for projects or website design <strong>[arnetworkhouse@gmail.com]</strong><br>
                 <a href="mailto:arnetworkhouse@gmail.com"><button class="contact">contact</button></a> <br>
-                or, Phone: <strong>[+91 94776 01536 / +91 90734 47966]</strong><br>
-                <center><b>whatsapp only !</b></center><br>
+                or, whatsapp: <strong>[+91 95648 69046]</strong><br>
+                <center><b> </b></center><br>
                 or, DM us on facebook <strong><a
                         href="https://www.facebook.com/people/AR-Network-House/61582122682177/?rdid=OEDi5i8z02rliaV9&share_url=https%3A%2F%2Fwww.facebook.com%2Fshare%2F1A9nJxyZVS%2F">AR
                         Network House</a></strong>
@@ -410,7 +410,7 @@
 
     <footer>
         © <span id="year"></span> AR Network House | All rights reserved. | <a
-            href="https://docs.google.com/document/d/1zunBVPuxMITIN7xLEyTT-Q6PvzNRQQEvqtp1Eo9ugLw/edit?tab=t.0"><strong>
+            href="https://arnetworkhouse-oss.github.io/ar-network-house/privacy_ar.html"><strong>
                 <font align="left">Privacy Policy</font>
             </strong></a>
     </footer>
