ar_network.html

--- a/ar_network.html
+++ b/ar_network.html
@@ -342,7 +342,7 @@
                 </div>
                 <div class="service-card">
                     <h3>CV</h3>
-                    <p>creating  & updating  CV with custom lines and prompt </p>
+                    <p>creating & updating CV with custom lines and prompt </p>
                 </div>
             </div>
         </div>
@@ -395,9 +395,10 @@
 
             <p style="text-align:center; margin-top:20px; color:#555;">
                 email us for projects or website design <strong>[arnetworkhouse@gmail.com]</strong><br>
-                <a href="mailto:arnetworkhouse@gmail.com"><button class="contact">contact</button></a> <br>
+                <a href="mailto:arnetworkhouse@gmail.com"><button class="contact">Email Us</button></a> <br>
                 or, whatsapp: <strong>[+91 95648 69046]</strong><br>
-                <center><b> </b></center><br>
+                <center> <a href=" https://wa.me/919564869046 "><button class="contact">Chat With Us</button></a>
+                </center><br>
                 or, DM us on facebook <strong><a
                         href="https://www.facebook.com/people/AR-Network-House/61582122682177/?rdid=OEDi5i8z02rliaV9&share_url=https%3A%2F%2Fwww.facebook.com%2Fshare%2F1A9nJxyZVS%2F">AR
                         Network House</a></strong>
