privacy_ar.html
Added fault liability and cost recovery policy to the document.

--- a/privacy_ar.html
+++ b/privacy_ar.html
@@ -222,14 +222,30 @@
                     Any project-related updates — including timeline adjustments, delivery notifications, or financial
                     updates — will be communicated to the client via <strong>Email or WhatsApp</strong>.
                 </dd>
+
                 <dt>Complimentary Correction Support Policy
                 </dt>
                 <dd>
-                   <strong>Clause:</strong>
+                    <strong>Clause:</strong>
                     If a project fault arises due to misinformation provided by the client but it is technically
                     feasible for AR Network House to correct or modify the faulty content, the organization will provide
                     the necessary corrections free of charge, as part of its commitment to client satisfaction and
                     service integrity.
+                </dd>
+
+                <dt> Fault Liability and Cost Recovery Policy
+                </dt>
+                <dd>
+                    <strong>Clause:</strong>
+                    In the event a project fault arises due to inaccurate or misleading information provided by the
+                    client, the client shall bear the entire project cost. The payable amount will include the advance
+                    already paid and the remaining cost balance, ensuring full cost recovery for operational resources
+                    and associated expenditures.
+                    <br>
+                    <strong>Example:</strong>
+                    If the total project value is ₹10 and the actual cost is ₹7, then in case of a fault caused by
+                    incorrect client information, the client will be liable to pay the advance already paid plus the
+                    remaining ₹2 balance, thereby covering the complete project cost
                 </dd>
             </dl>
 
