ar_network.html
Updated content and structure of the AR Network House webpage, enhancing service descriptions and contact information.

--- a/ar_network.html
+++ b/ar_network.html
@@ -342,9 +342,9 @@
     <section id="about" class="about">
         <div class="container">
             <h2>About Us</h2>
-            <p>AR Network House is an educational organization dedicated to providing high-quality study materials for
-                students and teachers. We offer structured notes, personalized website design, and innovative projects
-                to help you grow.</p>
+            <p><strong>AR Network House</strong>  delivers end-to-end creative and digital solutions including <strong>project development, poster
+                design, professional web design, and official document services</strong>. We combine innovation with precision to
+                ensure every deliverable reflects quality, professionalism, and measurable impact.</p>
         </div>
     </section>
 
@@ -431,13 +431,15 @@
 
             <p style="text-align:center; margin-top:20px; color:#555;">
                 email us for projects or website design <strong>[arnetworkhouse@gmail.com]</strong><br>
-                <a href="mailto:arnetworkhouse@gmail.com"><button class="contact">Email Us</button></a> <br>
-                or, whatsapp: <strong>[+91 95648 69046]</strong><br>
-                <center> <a href="https://wa.me/919564869046"><button class="contact">Chat With Us</button></a>
-                </center><br>
-                or, DM us on facebook <strong><a
-                        href="https://www.facebook.com/people/AR-Network-House/61582122682177/">AR Network
-                        House</a></strong>
+                <a href="mailto:arnetworkhouse@gmail.com"><button class="contact">Email Us</button></a> <br><br>
+                or, whatsapp: <strong>[+91 94774 40204]</strong><br>
+                <center> <a href="https://wa.me/message/BYBAW3B7HISBI1"><button class="contact">Chat With
+                            Us</button></a>
+                    <br><br>
+                    or, DM us on facebook <strong><a
+                            href="https://www.facebook.com/people/AR-Network-House/61582122682177/">AR Network
+                            House</a></strong>
+                </center>
             </p>
         </div>
     </section>
