ar_network.html

--- a/ar_network.html
+++ b/ar_network.html
@@ -420,7 +420,7 @@
                 </div>
                 <div class="service-card">
                     <h3>Official Documents</h3>
-                    <p>Support for PAN, voter ID, etc. like documents</p>
+                    <p>Support for PAN, voter ID, Passport/stamp size Photo ,etc. like documents</p>
                     <ul>
                         <li>PAN Card</li>
                         <li>Voter Card</li>
@@ -428,6 +428,7 @@
                         <li>CU registration</li>
                         <li>ABC Id / Apaar no</li>
                         <li>E-Shram card / UAN no</li>
+                        <li>Passport / stamp size Photo</li>
                     </ul>
                 </div>
                 <div class="service-card">
@@ -439,7 +440,15 @@
                         <li>Prompt-driven enhancements</li>
                     </ul>
                 </div>
-
+                <div class="service-card">
+                    <h3>Data Recovery</h3>
+                    <p>Files/photos etc</p>
+                    <ul>
+                        <li>the data should be recovered within 3-4 days</li>
+                        <li>there is less chance to get original photos ,videos or other files</li>
+                        
+                    </ul>
+                </div>
             </div>
         </div>
     </section>
