ar_network.html
Updated the HTML structure and added new services including card creation and image generation.

--- a/ar_network.html
+++ b/ar_network.html
@@ -406,6 +406,7 @@
                         <li>Cover page Design</li>
                         <li>Poster design & layout</li>
                         <li>Custom content formatting</li>
+                        <li>Image genaration</li>
                     </ul>
                 </div>
                 <div class="service-card">
@@ -429,6 +430,7 @@
                         <li>ABC Id / Apaar no</li>
                         <li>E-Shram card / UAN no</li>
                         <li>Passport / stamp size Photo</li>
+                       
                     </ul>
                 </div>
                 <div class="service-card">
@@ -438,6 +440,16 @@
                         <li>Content structuring</li>
                         <li>Professional formatting</li>
                         <li>Prompt-driven enhancements</li>
+                    </ul>
+                </div>
+                  <div class="service-card">
+                    <h3>Card</h3>
+                    <p>Customized invitation & Bussiness cards</p>
+                    <ul>
+                        <li>Birthday card</li>
+                         <li>identity card</li>
+                        <li>Bussiness Card</li>
+                        <li>Wedding Card</li>
                     </ul>
                 </div>
                 <div class="service-card">
